<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="ShopName"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background" />

    <!-- Login welcome form -->
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->

    <!-- Registration form-->
    <LinearLayout
        android:id="@+id/login_registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/black_transparent_70percent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingBottom="28dp"
        android:visibility="gone"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_registration_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="Dont have an account"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/login_registration_close_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Cancel"
                android:src="@drawable/close" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_registration_name_wrapper"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="5dp"
            android:textColorHint="@color/colorPrimaryLight">

            <EditText
                android:id="@+id/login_registration_name_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusRight="@+id/login_registration_password"
                android:nextFocusDown="@+id/login_registration_password"
                android:nextFocusForward="@+id/login_registration_password"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:singleLine="true"
                android:textColor="#A59F9F"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_registration_email_wrapper"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/colorPrimaryLight">

            <EditText
                android:id="@+id/login_registration_email_text_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:nextFocusRight="@+id/login_registration_password"
                android:nextFocusDown="@+id/login_registration_password"
                android:nextFocusForward="@+id/login_registration_password"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:singleLine="true"
                android:textColor="#C3BEBE"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_registration_password_wrapper"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/colorPrimaryLight">

            <EditText
                android:id="@+id/login_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/ic_menu_view"
                android:drawableRight="@android:drawable/ic_menu_view"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:singleLine="true"
                android:textColor="#B1AAAA"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--android:imeActionId="123"-->
        <!--android:imeActionLabel="@string/action_sign_up"-->
        <!--android:imeOptions="actionSend"-->

        <RadioGroup
            android:id="@+id/login_registration_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/login_registration_sex_man"
                style="@android:style/Widget.Holo.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:button="@color/colorAccent"
                android:checked="false"
                android:drawableBottom="@color/colorAccent"
                android:fontFamily="sans-serif-light"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/Male"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/login_registration_sex_woman"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@color/colorAccent"
                android:checked="true"
                android:fontFamily="sans-serif-light"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/Female"
                android:textColor="@color/white"
                android:textColorHighlight="#BD4949"
                android:textColorHint="#E4E0E0"
                android:textColorLink="#E6DADA"
                android:textCursorDrawable="@drawable/apptheme_scrubber_control_pressed_holo"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/login_registration_confirm"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#E91E63"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/Register"
            android:textCursorDrawable="@color/colorAccent" />


    </LinearLayout>
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->

    <!-- Login with email form-->
    <LinearLayout
        android:id="@+id/login_phone_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/black_transparent_70percent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingBottom="28dp"
        android:visibility="visible"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_phone_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/base_margin_vertical"
                android:paddingBottom="@dimen/base_margin_vertical"
                android:text=" Login into your Account"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_phone_phone_wrapper"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/colorPrimaryLight">

            <AutoCompleteTextView
                android:id="@+id/login_phone_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="Mobile No"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusRight="@+id/login_registration_password"
                android:nextFocusDown="@+id/login_registration_password"
                android:nextFocusForward="@+id/login_registration_password"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:singleLine="true"
                android:textColor="#D1CDCD"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_phone_password_wrapper"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:textColorHint="@color/colorPrimaryLight">

            <EditText
                android:id="@+id/login_editext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:drawableEnd="@android:drawable/ic_menu_view"
                android:drawableRight="@android:drawable/ic_menu_view"
                android:hint="@string/Password"
                android:imeActionId="124"
                android:imeActionLabel="@string/Log_in"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:singleLine="true"
                android:textColor="#BAB7B7"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_phone_forgotten_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:padding="16dp"
            android:text="@string/Forgot_your_password"
            android:textColor="@color/textIconColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:padding="16dp"
            android:text="New? Create an Account"
            android:textColor="@color/textIconColorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_phone_confirm"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#E91E63"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Log_me_in" />
    </LinearLayout>
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->

    <!-- Forgotten password form form-->
    <LinearLayout
        android:id="@+id/login_phone_forgotten_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/black_transparent_70percent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingBottom="28dp"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_phone_forgotten_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/base_margin_vertical"
                android:paddingBottom="@dimen/base_margin_vertical"
                android:text="@string/Forgot_your_password"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/login_phone_forgotten_back_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Cancel"
                android:padding="5dp"
                android:src="@drawable/close" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_phone_forgotten_phone_wrapper"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/colorPrimaryLight">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Mobile No."
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusRight="@+id/login_registration_password"
                android:nextFocusDown="@+id/login_registration_password"
                android:nextFocusForward="@+id/login_registration_password"
                android:paddingStart="@dimen/base_margin_horizontal"
                android:paddingLeft="@dimen/base_margin_horizontal"
                android:paddingEnd="@dimen/base_margin_horizontal_half"
                android:paddingRight="@dimen/base_margin_horizontal_half"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_phone_forgotten_confirm"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="#0D7CAE"
            android:text="@string/Reset" />
    </LinearLayout>
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->
</RelativeLayout>